Changes to css on routing page Fixed map/info links typo

--- a/Flask app/static/main2.css
+++ b/Flask app/static/main2.css
@@ -66,6 +66,13 @@ button {
     float: left;
 }
 
+#route-map {
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    left: 50%;
+}
+
 /* Styling for infowindows on map*/
 #iw {
     text-align: center;
