--- a/Flask app/templates/index2.html
+++ b/Flask app/templates/index2.html
@@ -164,7 +164,7 @@
     <div class="header">
         <a href="#default" class="logo">dublinbikes</a>
         <div class="header-right">
-            <a href="index2">Map</a>
+            <a href="#">Map</a>
             <a href="info">Info</a>
         </div>
     </div>
