--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -100,11 +100,10 @@
     <div class="header">
         <a href="#default" class="logo">dublinbikes</a>
         <div class="header-right">
-            <a href="index2">Map</a>
+            <a href="index">Map</a>
             <a href="info">Info</a>
         </div>
     </div>
-
 
     <div class="container-fluid">
         <div class="row">
