--- a/Flask app/static/main2.css
+++ b/Flask app/static/main2.css
@@ -65,6 +65,11 @@ button {
     width: 75%;
     float: left;
 }
+#map2 {
+    height: 48rem;
+    width: 100%;
+    float: left;
+}
 
 /* Styling for infowindows on map*/
 #iw {
@@ -224,6 +229,14 @@ button {
     border: .5px solid gray;
     background-color: rgba(42, 42, 46, 1);
 }
+.btn{
+    width: 5rem;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
+}
+#slabel{
+    margin-left: 1rem;
+}
 
 /*Info page css*/
 
@@ -277,7 +290,7 @@ button {
 
 .container{
     display: grid;
-    grid-template-columns: 15rem auto auto auto auto;
+    grid-template-columns: 15rem 30rem auto auto auto;
     grid-template-areas: 
         'sidebar info-panel chartA chartA chartA'
         'sidebar info-panel chartB chartB chartB';
@@ -285,5 +298,25 @@ button {
     height: 48rem;
     background-color: #ededee
 }
+
+span h1{
+    color: black;
+}
+
+span h2{
+    color: black;
+}
+
+.info-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 1rem;
+    height: 42rem;
+    border: 1rem solid gray;
+    padding-left: 3rem;
+    border-radius: 1rem;
+}
+
+
 
 
