Styling for info button added

--- a/Flask app/static/main2.css
+++ b/Flask app/static/main2.css
@@ -92,6 +92,10 @@ button {
     font-size: 14px;
 }
 
+#infobutton {
+    overflow:hidden;
+}
+
 h1 {
     font-size: 40px;
     color: rgba(237, 237, 238, 1);
