--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -132,7 +132,7 @@
         <div class="chartA" id="bikesByHourDiv" style="background-color: white">
             <h2> Free Bikes & Stands by Hour</h2>
             <div id="bikesByHourBtns"></div>
-            <canvas id="bikesByHour" width="100%" height="25%"></canvas>
+            <div><canvas id="bikesByHour"></canvas></div>
 
             <!-- Rectangular switch for selecting between COVID & non-COVID Data-->
             
@@ -140,7 +140,7 @@
         </div>
         <div class="chartB" id="bikesByWeekdayDiv" style="background-color: white">
             <h2> Station Traffic by Day </h2>
-            <canvas id="bikesByWeekday" width="100%" height="25%"></canvas>
+            <div><canvas id="bikesByWeekday"></canvas></div>
         </div>
 
         <script>
