Fixes to the date box and how the date is chosen

--- a/Flask app/static/main2.css
+++ b/Flask app/static/main2.css
@@ -337,6 +337,7 @@ span h2{
 .box-info{
     display: inline-block;
     border: 0.5rem solid gray;
+    border-radius: 0.5rem;
     width: 12rem;
     padding: 0;
     margin-left: 1rem;
