Fixed wrong link in logo button on routeindex page

--- a/Flask app/templates/routeindex2.html
+++ b/Flask app/templates/routeindex2.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <a href="#default" class="logo">dublinbikes</a>
+        <a href="/index" class="logo">dublinbikes</a>
         <div class="header-right">
             <a href="/index">Map</a>
             <a href="/info">Info</a>
