--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -129,10 +129,14 @@
         <!-- link js functions to request data & draw charts-->
         <script src="{{ url_for('static', filename='chartWidget.js') }}" ></script>
 
-        <div class="chartA" id="bikesByHourDiv" style="background-color: white">
+        <div class="chartA" id="bikesByHourDiv" style="background-color: white, position:relative">
             <h2> Free Bikes & Stands by Hour</h2>
             <div id="bikesByHourBtns"></div>
-            <canvas id="bikesByHour" height="68px"></canvas>
+
+            <!-- container for weather icons associated with the 3 hourly prediction-->
+            <div id="weatherIconsDiv" style="position: absolute"></div>
+
+            <canvas id="bikesByHour" height="68px" style="position: absolute"></canvas>
 
             <!-- Rectangular switch for selecting between COVID & non-COVID Data-->
             
