update info2.html - inserted dummy div "bikesAvailabilityDiv" to act as target for displaying bikes availability graph

--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -147,6 +147,11 @@
             <canvas id="bikesByWeekday" height="68px"></canvas>
         </div>
 
+        <div class="row" id="bikeAvailabilityDiv" style="background-color: yellow">
+            <h2> Bike Availability</h2>
+            <canvas id="bikeAvailability" width="100%" height="25%"></canvas>
+        </div>
+
         <script>
             getChartData(stands[0].number, chartMain);
         </script>
