update info2.html - now calls function 'getDateData()' to pull dates associated with bike usage predictions from the server

--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -153,6 +153,7 @@
         </div>
 
         <script>
+            getDateData(stands[0].number);
             getChartData(stands[0].number, chartMain);
         </script>
 
