updates to info2 to get date data

--- a/Flask app/templates/info2.html
+++ b/Flask app/templates/info2.html
@@ -145,6 +145,7 @@
 
         <script>
             getChartData(stands[0].number, chartMain);
+            getDateData(stands[0].number);
         </script>
 
 
